# optimized-dev-experiences

./: .gitignore  README.md  app.py  mise.toml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  setup.sh
templates/: base.html  index.html
tests/: README.md  conftest.py  test_db.py  test_templates.py  test_todo_app.py
