[project]
name = "optimized-dev-experiences"
version = "0.1.0"
description = ""
authors = [
    {name = "Jericho Arcelao",email = "echo@thinkingmachin.es"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (==3.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

